2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* reggroups.c (default_register_reggroup_p): Replace current_gdbarch
	by gdbarch.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* infcmd.c (default_print_registers_info, print_return_value)
	(print_vector_info, print_float_info): Replace current_gdbarch by
	gdbarch.
	(registers_info): Use get_frame_arch to get at the current 
	architecture by frame_info.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* i387-tdep.c (i387_collect_fsave, i387_collect_fxsave): Use
	get_regcache_arch to get at the current architecture by regcache.

2007-10-22  Markus Deuling  <deuling@de.ibm.com>

	* target.c (debug_print_register): Use get_regcache_arch to get at the
	current architecture by regcache. 

2007-10-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2read.c (read_file_scope): Add a comment.
	(dwarf2_add_field, dwarf2_add_member_fn, read_structure_type)
	(read_enumeration_type, process_enumeration_scope, read_array_type)
	(read_typedef, read_base_type, read_subrange_type)
	(read_unspecified_type): Use dwarf2_name.

2007-10-21  Daniel Jacobowitz  <dan@codesourcery.com>

	* coffread.c (coff_symfile_finish): Call dwarf2_free_objfile.
	* dwarf2read.c (dwarf2_free_objfile): New.
	* elfread.c (elf_symfile_finish): Call dwarf2_free_objfile.
	* symfile.h (dwarf2_free_objfile): Declare.

2007-10-21  Joel Brobecker  <brobecker@adacore.com>

	* hppa-hpux-nat.c (hppa_hpux_store_register): Add missing semi-colon.

2007-10-21  Luis Machado  <luisgpm@br.ibm.com>

	* rs6000-tdep.c (ppc_dwarf2_frame_init_reg): New function.
	* (rs6000_gdbarch_init): Install ppc_dwarf2_frame_init_reg as
	default dwarf2_frame_set_init_reg function.
		
2007-10-21  Pedro Alves  <pedro_alves@portugalmail.pt>

	* NEWS: Mention native MinGW configuration.

2007-10-19  Ulrich Weigand  <uweigand@de.ibm.com>

	* gdbarch.sh: Remove "macro" column of input table.  Remove handling
	of "macro" column throughout the file.  Remove (empty) "macro" entry